2006-01-25  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	Rixes of memory leak (checked with win_and dumb win_gui)
	* interface/w32g.h interface/w32g_mag.c interface/w32g_mag.h 
	* interface/w32g_playlist.c interface/w32g_subwin.c interface/w32g_subwin.h
	* interface/w32g_utl.c interface/w32g_utl.h libarc/arc.c
	* timidity/aq.c timidity/aq.h timidity/instrum.c timidity/instrum.h
	* timidity/playmidi.c timidity/readmidi.c timidity/readmidi.h
	* timidity/recache.c timidity/recache.h timidity/resample.c
	* timidity/resample.h timidity/sffile.c timidity/sndfont.c
	* timidity/timidity.c timidity/wrdt.c windrv/timiwp_timidity.c

	* interface/rtsyn_common.c: not free_global_mblock() bitween sound;

2006-01-25  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* windrv/mmddk.h: Added. LGPL version.
	* windrv/Makefile.am
	* doc/ja_JP.eucJP/README.w32
	* doc/C/README.w32: no more depence on NTDDK.
	* interface/rtsyn_common.c: call free_global_mblock() with option -U
	* timidity/readmidi.c: Mingw gcc3 and Borland C hack

2006-01-23  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* timidity/mix.c
	* timidity/optcode.c timidity/optcode.h timidity/playmidi.c
	* timidity/reverb.c timidity/timidity.c timidity/wrd.h
	* timidity/wrdt.c: supress Borland C inline warrings.

2006-01-23  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* timidity/readmidi.c: XG reverb fix
	* timidity/sysdep.h: digital mars fix

2006-01-21  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* timidity/portaudio_a.c: bug fix
	* interface/w32g_syn.c: digital mars compile fix
	* timidity/effect.c.orig:  Noise shaping noise fix.

2006-01-19  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	Can compile with Digital Mars.
	* configure.in
	* interface/Makefile.am libarc/Makefile.am libunimod/Makefile.am 
	* timidity/Makefile.am utils/Makefile.am
	* timidity/common.c.orig timidity/list_a.c.orig timidity/timidity.c 
	* utils/support.c: Changes for Digital Mars.
	* timidity/effect.c.orig:  Noise shaping noise hack.